# xiangqi-auto

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp  xiangqi_auto.manifest  xiangqi_auto.rc
src/ui/: base_window.cpp  base_window.h  d3d_manager.cpp  d3d_manager.h  main_window.cpp  main_window.h
